# aubio

./: .gitignore  CMakeLists.txt
scripts/: generate_cmake_src_list.py
